--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -504,6 +504,69 @@ cards:
         tabType: metadata
         filename: cardMetadata/healthcare/cardVaccinationsDaily.md
 
+############################################################################################################################## 
+
+  - heading: Vax waffle
+    cardType: percentageWaffle
+    locationAware:
+      included: 
+        areaType:
+          - overview
+
+    fullWidth: false
+    abstract: >
+      Something smart
+    
+    download:
+      - cumVaccinationFirstDoseUptakeByPublishDatePercentage
+      - cumVaccinationSecondDoseUptakeByPublishDatePercentage
+    
+    tabs: 
+      - heading: Coverage
+        tabType: chart
+        params:
+          - key: areaType
+            sign: "="
+            value: overview
+
+        fields:
+          - label: Total vaccination - 1st dose
+            value: cumVaccinationFirstDoseUptakeByPublishDatePercentage
+            tooltip: something something
+            colour: 0
+          
+          - label: Total vaccination - 2st dose
+            value: cumVaccinationSecondDoseUptakeByPublishDatePercentage
+            tooltip: something somethin else
+            colour: 3
+          
+      - heading: Percentage data
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: overview
+      
+        fields:
+          - label: Report date
+            value: date
+            type: date
+            tooltip: Date
+
+          - label: "1st dose"
+            value: cumVaccinationFirstDoseUptakeByPublishDatePercentage
+            type: numeric
+            tooltip: Daily reported number of people who received the first dose of COVID-19 vaccine
+
+          - label: "2nd dose"
+            value: cumVaccinationSecondDoseUptakeByPublishDatePercentage
+            type: numeric
+            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/healthcare/cardVaccinationsDaily.md
+
 ############################################################################################################################# 
 
 
