changes card type

--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -507,7 +507,7 @@ cards:
 ############################################################################################################################## 
 
   - heading: Vax waffle
-    cardType: waffleCard
+    cardType: tabContentRaw
     locationAware:
       included: 
         areaType:
