--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -507,7 +507,7 @@ cards:
 ############################################################################################################################## 
 # {{ StartDevOnlyBlock }}
 
-  - heading: Vax waffle
+  - heading: Vaccination uptake, by report date
     cardType: tabContentRaw
     locationAware:
       included: 
@@ -516,7 +516,10 @@ cards:
 
     fullWidth: false
     abstract: >
-      Something smart
+      Total percentage of people who have received a vaccination for COVID-19, by dose and day on which the vaccine was reported.
+      Data are reported daily, and include all vaccination events that are entered on the relevant system at 
+      the time of extract. This includes reported vaccines that were administered up to and including the date 
+      shown.
     
     download:
       - cumVaccinationFirstDoseUptakeByPublishDatePercentage
@@ -531,17 +534,17 @@ cards:
             value: overview
 
         fields:
-          - label: Total vaccination - 1st dose
+          - label: Percentage uptake - 1st dose
             value: cumVaccinationFirstDoseUptakeByPublishDatePercentage
-            tooltip: something something
+            tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
             colour: 0
           
-          - label: Total vaccination - 2st dose
+          - label: Percentage uptake - 2nd dose
             value: cumVaccinationSecondDoseUptakeByPublishDatePercentage
-            tooltip: something somethin else
+            tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine
             colour: 3
           
-      - heading: Percentage data
+      - heading: Data
         tabType: table
         params:
           - key: areaType
@@ -557,16 +560,16 @@ cards:
           - label: "1st dose"
             value: cumVaccinationFirstDoseUptakeByPublishDatePercentage
             type: numeric
-            tooltip: Daily reported number of people who received the first dose of COVID-19 vaccine
+            tooltip: Cumulative percentage of people who received the first dose of COVID-19 vaccine
 
           - label: "2nd dose"
             value: cumVaccinationSecondDoseUptakeByPublishDatePercentage
             type: numeric
-            tooltip: Cumulative number of people who received the first dose of COVID-19 vaccine
+            tooltip: Cumulative percentage of people who received the second dose of COVID-19 vaccine
 
       - heading: About 
         tabType: metadata
-        filename: cardMetadata/vaccinations/cardVaccinationsDaily.md
+        filename: cardMetadata/vaccinations/cardVaccinationsDailyUptake.md
 
 # {{ EndDevOnlyBlock }}
 
@@ -939,7 +942,7 @@ cards:
         areaType:
           - overview
 
-    fullWidth: true
+    fullWidth: false
     abstract: >
       Total percentage of people who have received a vaccination for COVID-19, by day on which the vaccine was reported. 
       Data are reported daily, and include all vaccination events that are entered on the relevant system at 
