adds vaccination uptake changelog

--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -80,6 +80,26 @@ colours:
 
 
 changeLog:
+  - type: *newMetric
+    date: "2021-03-18"
+    displayBanner: true
+    relativeUrl: /details/vaccinations
+    headline: Vaccination uptake added
+    body: > 
+      The percentage of people aged 18 and over who have received a COVID-19 vaccination is now shown on the dashboard by report date. 
+      You can view vaccinations for the UK and the 4 nations, split by 1st and 2nd dose.
+    details: |
+      Percentage uptake by report date is calculated by dividing the total number of vaccinations given by the mid-year 2019 population estimate for people aged 18 and over, 
+      published by the Office for National Statistics.
+      
+      The percentage uptake published here for the nations of the UK may differ from those reported by the nations individually. In particular, 
+      figures published by Public Health Wales use denominators of those registered with NHS Wales rather than mid-year population estimates.
+      
+      API metrics added are as follows:
+      
+      - `cumVaccinationFirstDoseUptakeByPublishDatePercentage`
+      - `cumVaccinationSecondDoseUptakeByPublishDatePercentage`
+
   - type: *dataIssue
     date: "2021-03-17"
     displayBanner: true
