updated vacc uptake changelog

--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -99,6 +99,7 @@ changeLog:
       
       - `cumVaccinationFirstDoseUptakeByPublishDatePercentage`
       - `cumVaccinationSecondDoseUptakeByPublishDatePercentage`
+      - `cumVaccinationCompleteCoverageByPublishDatePercentage`
 
   - type: *dataIssue
     date: "2021-03-17"
