--- a/Layouts/Changes/changeLog.yaml
+++ b/Layouts/Changes/changeLog.yaml
@@ -82,6 +82,15 @@ colours:
 
 
 changeLog:
+  - type: *other
+    date: "2021-03-22"
+    displayBanner: true
+    relativeUrl: "/details/about-data#blogs"
+    headline: "New blog: how we expanded the dashboard"
+    body: > 
+      Our latest blog, [Behind the scenes: Expanding the COVID-19 dashboard](https://publichealthmatters.blog.gov.uk/2021/03/22/behind-the-scenes-expanding-the-covid-19-dashboard/) is available on 
+      [Public health matters](https://publichealthmatters.blog.gov.uk/), Public Health England’s official blog.
+    
   - type: *dataIssue
     date: "2021-03-21"
     displayBanner: true
